--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             for (let i = 0; i < 58; i++) {
                 let x = Math.floor(Math.random() * 10) + 1;
                 let y = Math.floor(Math.random() * 10) + 1;
-                formulas.push(`${x} × ${y} = ______`);
+                formulas.push(`${x} × ${y} = _______`);
             }
 
             // Create three columns
